Add phone dependency to package.json

--- a/output/team.html
+++ b/output/team.html
@@ -35,25 +35,25 @@
             </div>
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item">ID: 2312321</li>
+                <li class="list-group-item">ID: 231321</li>
                 <li class="list-group-item">
                   Email: <a href="mailto:jeff@gmail.com">jeff@gmail.com</a>
                 </li>
-                <li class="list-group-item">Office number: +44 07861272588</li>
+                <li class="list-group-item">Office number: +44 07861 272588</li>
               </ul>
             </div>
           </div>
 
           <div class="card employee-card">
             <div class="card-header">
-              <h2 class="card-title">Shannel Daley</h2>
+              <h2 class="card-title">Shannel Morgan-Daley</h2>
               <h3 class="card-title">
                 <i class="fas fa-glasses mr-2"></i>Engineer
               </h3>
             </div>
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item">ID: 231</li>
+                <li class="list-group-item">ID: 1312321</li>
                 <li class="list-group-item">
                   Email: <a href="mailto:shan@gmail.com">shan@gmail.com</a>
                 </li>
@@ -79,11 +79,11 @@
             </div>
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item">ID: 92312</li>
+                <li class="list-group-item">ID: 31321</li>
                 <li class="list-group-item">
                   Email: <a href="mailto:jerome@gmail.com">jerome@gmail.com</a>
                 </li>
-                <li class="list-group-item">School: UC</li>
+                <li class="list-group-item">School: UCC</li>
               </ul>
             </div>
           </div>
